Layout issue with Chrome (#farhana, #sara)

--- a/proto-site/css/styles.css
+++ b/proto-site/css/styles.css
@@ -622,7 +622,7 @@ Right side navigation
 #header {
   height: 100%;
   position: absolute;
-  width: 23em;
+  width: 27em;
   right: 0;
 }
 /* - - - - - - - - - - - - - - -
